test/translator/success/import_test/file.prez
int func() {
  returna 2;
}

int func(int n) {
  return n + 1;
}
