test/translator/error/param.prez
void main() {
  add(1,2,4);
}

int add(int a, int b) {
  if (g(b)) {
    return -1;
  }
  return a + b;
}

bool g(bool b) {
  return b;
}


